# ai-engineer-preparation

./: .gitignore  README.md  pyproject.toml
backend/: agent.py  generate_finetune_dataset.py  ingest.py  main.py  neo4j_client.py  vector_store.py
model-training/: FINETUNING_GUIDE.md  check_hallucination_consistency.py  eval_qwen3_0_6b_rouge.py  tiny_dataset.jsonl  train_qwen3_0_6b_base.py
